Fixed scrollbar at low screen widths

--- a/src/routes/AuthLayoutRouter/components/Navigation/Navigation.scss
+++ b/src/routes/AuthLayoutRouter/components/Navigation/Navigation.scss
@@ -69,6 +69,9 @@
     min-width: 6%;
     margin: 0 15px 0 15px;
   }
+  .navigation {
+    overflow: hidden;
+  }
 }
 
 @media screen and (max-width: 600px) {
